# ScuffedMinecraft

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  ScuffedMinecraft.sln
.github/workflows/: build-ci.yml
Dependencies/include/: OpenSimplexNoise.hh
Dependencies/include/glad/: glad.h
Dependencies/lib/: glfw3.lib
ScuffedMinecraft/: CMakeLists.txt  ConfigLoader.h  ScuffedMinecraft.vcxproj  ScuffedMinecraft.vcxproj.filters  imgui.ini
ScuffedMinecraft/assets/shaders/: billboard_frag.glsl  billboard_vert.glsl  block_outline_frag.glsl  block_outline_vert.glsl  crosshair_frag.glsl  crosshair_vert.glsl  fragment_shader.glsl  framebuffer_frag.glsl  framebuffer_vert.glsl  main_frag.glsl  main_vert.glsl  vertex_shader.glsl  water_vert.glsl
ScuffedMinecraft/assets/sprites/: block_map.psd
ScuffedMinecraft/src/: Application.cpp  Application.h  Block.cpp  Block.h  Blocks.h  CMakeLists.txt  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkData.cpp  ChunkData.h  ChunkPos.cpp  ChunkPos.h  ChunkPosHash.h  KeyInput.cpp  KeyInput.h  NoiseSettings.cpp  NoiseSettings.h  Physics.cpp  Physics.h  Planet.cpp  Planet.h  Shader.cpp  Shader.h  SurfaceFeature.cpp  SurfaceFeature.h  TupleHash.h  Vertex.h  WorldGen.cpp  WorldGen.h
WillowVoxEngine/: CMakeLists.txt
WillowVoxEngine/include/WillowVox/: WillowVox.h  WillowVoxDefines.h
WillowVoxEngine/include/WillowVox/core/: Application.h  EntryPoint.h  Logger.h
WillowVoxEngine/include/WillowVox/events/: Event.h  EventDispatcher.h  KeyPressEvent.h  KeyReleaseEvent.h  MouseClickEvent.h  MouseMoveEvent.h  MouseReleaseEvent.h  MouseScrollEvent.h  WindowCloseEvent.h  WindowResizeEvent.h
WillowVoxEngine/include/WillowVox/input/: Key.h
WillowVoxEngine/include/WillowVox/input/opengl/: OpenGLKey.h
WillowVoxEngine/include/WillowVox/math/: Noise.h  NoiseSettings.h  ivec3Hash.h
WillowVoxEngine/include/WillowVox/physics/: Physics.h
WillowVoxEngine/include/WillowVox/rendering/: BaseMaterial.h  BaseVertex.h  Camera.h  Mesh.h  MeshRenderer.h  RenderingAPI.h  Shader.h  Texture.h  Window.h
WillowVoxEngine/include/WillowVox/rendering/engine-default/: ChunkFluidMaterial.h  ChunkSolidMaterial.h  ChunkVertex.h  FluidVertex.h  RawTriMaterial.h  TextureMaterial.h  Vertex.h
WillowVoxEngine/include/WillowVox/rendering/opengl/: OpenGLAPI.h  OpenGLMesh.h  OpenGLShader.h  OpenGLTexture.h  OpenGLWindow.h
WillowVoxEngine/include/WillowVox/resources/: Block.h  Blocks.h
WillowVoxEngine/include/WillowVox/world/: Chunk.h  ChunkData.h  ChunkManager.h  NoiseWorldGen.h  SurfaceFeature.h  TerrainGen.h  World.h  WorldGen.h  WorldGlobals.h
assets/shaders/: chunk_shader.frag  chunk_shader.vert
assets/shaders/chunk-shaders/: chunk_billboard_frag.glsl  chunk_billboard_vert.glsl  chunk_fluid_frag.glsl  chunk_fluid_vert.glsl  chunk_solid_frag.glsl  chunk_solid_vert.glsl
assets/shaders/post-processing/: test_frag.glsl  test_vert.glsl
assets/shaders/sm/: block_outline_frag.glsl  block_outline_vert.glsl  crosshair_frag.glsl  crosshair_vert.glsl
assets/sprites/: block_map.psd
cmake/: modules.cmake
include/: BlockOutlineMaterial.h  BlockOutlineVertex.h  CrosshairMaterial.h  CrosshairVertex.h  SMTerrainGen.h  StandardWorld.h
include/physics/: VoxelRaycast.h
include/ui/: UIManager.h
include/world/: Block.h  BlockRegistry.h  ChunkData.h  ChunkManager.h  ChunkRenderer.h  ScuffedWorldGen.h  WorldGen.h
src/: BlockOutlineMaterial.cpp  CrosshairMaterial.cpp  main.cpp
src/physics/: VoxelRaycast.cpp
src/ui/: UIManager.cpp
src/world/: ChunkManager.cpp  ChunkRenderer.cpp  ScuffedWorldGen.cpp  WorldGen.cpp
